5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4073/executions/1578_1332.log
== SUBMITION (2019-03-25 19:20:26) 
-- CODE:
aresta =5
area = ((3/2)(3**0,5)aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.172437
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area = ((3/2)(3**0,5)aresta**2)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:26) 
-- CODE:
aresta =5
area = ((3/2)(3**0,5)aresta**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = ((3/2)(3**0,5)aresta**2)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:20:40) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.176735
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 2
    area =((3/2)(3**0,5)aresta**2)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:41) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)aresta**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =((3/2)(3**0,5)aresta**2)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:21:20) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.169893
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area =((3/2)(3**0,5)*aresta**2)
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:20) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((3/2)(3**0,5)*aresta**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:22) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((3/2)(3**0,5)*aresta**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:23) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((3/2)(3**0,5)*aresta**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:24) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((3/2)(3**0,5)*aresta**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:21:25) 
-- CODE:
aresta =5
area =((3/2)(3**0,5)*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((3/2)(3**0,5)*aresta**2)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:07) 
-- CODE:
aresta =5
area =((3/2)*(3**0,5*aresta**2))
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((3/2)*(3**0,5*aresta**2))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:22:08) 
-- CODE:
aresta =5
area =((3/2)*(3**0,5*aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.212789
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area =((3/2)*(3**0,5*aresta**2))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:22:23) 
-- CODE:
aresta =5
area =((3/2)*(3**0,5*aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.208149
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area =((3/2)*(3**0,5*aresta**2))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:26) 
-- CODE:
aresta =5
area =((3/2)*(3**0,5*aresta**2))
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =((3/2)*(3**0,5*aresta**2))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:22:34) 
-- CODE:
aresta =5
area =((3/2)*(3**0,5*aresta**2))
 
print(round(area, 4))
-- EXECUTION TIME:
0.162158
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area =((3/2)*(3**0,5*aresta**2))
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:22:54) 
-- CODE:
aresta =5
area =((3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:22:55) 
-- CODE:
aresta =5
area =((3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.178046
-- ERROR:
  File "/home/codebench/codes/1578/1332/main.py", line 4
    print(round(area, 4))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:23:02) 
-- CODE:
aresta =5
area =(3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.156037
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area =(3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:03) 
-- CODE:
aresta =5
area =(3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:03) 
-- CODE:
aresta =5
area =(3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =(3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:23:23) 
-- CODE:
aresta =5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:23:24) 
-- CODE:
aresta =5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.123648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:25:22) 
-- CODE:
aresta =5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:25:31) 
-- CODE:
aresta =5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:25:36) 
-- CODE:
aresta =5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:25:47) 
-- CODE:
aresta =5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.216479
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:16) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:21) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:26:22) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.129554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:26:23) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.171746
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:39) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:43) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:26:45) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.133556
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:58) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:27:46) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:26) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:27) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:27) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.135849
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:27) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:27) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:27) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:28) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.272795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:28) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.192382
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:28) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.123807
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:28) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.121003
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:29) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.190187
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1578/1332/main.py", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:29) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:29) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:29) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:30) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:30) 
-- CODE:
aresta = 5
area = (3/2)*(3**0,5*aresta**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2)*(3**0,5*aresta**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:28:54) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:28:56) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.216036
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
